--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -151,11 +151,20 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/facebook_signin"
                 android:layout_width="26.7dp"
                 android:layout_height="26.7dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:src="@drawable/fb"/>
+                android:src="@drawable/fb"
+                android:onClick="onClick"/>
+
+<!--            original facebook login button, visibility set to gone-->
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
             <ImageView
                 android:layout_width="26.7dp"
